# bevy-axum

./: .gitignore  MakeFile  readme.md
game/: Cargo.toml
game/assets/levels/: old_town.lvl.ron
game/src/: bevy_config.rs  ingame_menu.rs  lib.rs  main.rs  menu.rs  movement.rs
game/src/dev/: dev_editor.rs
game/src/file_system_interaction/: asset_loading.rs  game_state_serialization.rs  level_serialization.rs
game/src/level_instantiation/: map.rs  spawning.rs
game/src/level_instantiation/spawning/: objects.rs  post_spawn_modification.rs
game/src/level_instantiation/spawning/objects/: camera.rs  dialog.rs  level.rs  npc.rs  object.rs  orb.rs  player.rs  point_light.rs  primitives.rs  skydome.rs  sunlight.rs
game/src/movement/: general_movement.rs  navigation.rs  physics.rs
game/src/movement/general_movement/: components.rs
game/src/player_control/: player_embodiment.rs
game/src/player_control/camera/: cursor.rs  focus.rs  rig.rs
game/src/world_interaction/: dialog.rs  interactions_ui.rs
game/src/world_interaction/dialog/: resources.rs
server/: Cargo.toml
server/src/: main.rs
